log
Mon Mar 15 14:05:44 UTC 2021: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:16:5: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
   c = a + b;
     ^
cc1: all warnings being treated as errors
Compilation failed
Mon Mar 15 14:06:01 UTC 2021: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
8edef57
Mon Mar 15 14:46:12 UTC 2021: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
100b6f9
Mon Mar 15 14:46:36 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
1bbde13
Mon Mar 15 14:49:38 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
98e538b
Mon Mar 15 14:50:09 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
e936c61
Mon Mar 15 15:01:23 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
fc8a5db
Mon Mar 15 15:14:20 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
d39c6db
Wed Mar 17 13:54:26 UTC 2021: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
29243b5
Wed Mar 17 14:00:27 UTC 2021: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  3|4
total_score: 30/70
5f162dd
Wed Mar 17 14:13:33 UTC 2021: 
 exercises.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
 tests:  3|4
total_score: 30/70
d4e2d0e
Wed Mar 17 17:09:59 UTC 2021: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  4|3
total_score: 40/70
4393305
Wed Mar 17 17:10:19 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
c4251c9
Wed Mar 17 17:17:06 UTC 2021: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|3
total_score: 40/70
76fe24d
Wed Mar 17 17:18:47 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
1ffbdb2
Fri Mar 19 00:56:12 UTC 2021: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 50/70
082d1b3
Fri Mar 19 01:05:47 UTC 2021: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  6|2
total_score: 50/70
b6301ea
Fri Mar 19 01:13:35 UTC 2021: 
 exercises.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  6|2
total_score: 50/70
57067ca
Fri Mar 19 19:19:05 UTC 2021: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
44e9e12
Fri Mar 19 19:23:54 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
dec0310
Fri Mar 19 19:25:02 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
3b82f13
Fri Mar 19 19:25:41 UTC 2021: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
f8dbdc2
Fri Mar 19 19:26:22 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3731aef
Fri Mar 19 19:26:49 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
e351413
Fri Mar 19 19:27:06 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
4ead235
Fri Mar 19 19:27:29 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
003e1ad
Fri Mar 19 19:28:20 UTC 2021: 
 exercises.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  7|1
total_score: 60/70
55294ab
Fri Mar 19 19:28:48 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
e5fd967
Fri Mar 19 19:29:04 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
667467d
Fri Mar 19 19:33:02 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
f3faefa
Fri Mar 19 19:33:19 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|0
total_score: 70/70
92d398d
Fri Mar 19 20:19:57 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|1
total_score: 60/70
88d5b36
